k8s/Ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: labelgenius-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: ""
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - labelgenius.pics
      secretName: tls-secret-1
  ingressClassName: nginx
  rules:
    - host: labelgenius.pics
      http:
        paths:
          - path: "/api/project(/|$)(.*)"
            pathType: Prefix
            backend:
              service:
                name: project-service
                port:
                  number: 80
          - path: "/api/me(/|$)(.*)"
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - path: "/api/auth(/|$)(.*)"
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
